src/test/deca/context/valid/provided/test04.deca
class C{
    float y = 3;
    void setX(int x){
        y = x;
    }
}