src/test/deca/context/invalid/provided/testi14.deca
class X{
    void methody(float y){
        int x = y;
    }
}